# quantum-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ecosystem.config.cjs  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-sdk.yml
addons/quantum_api_client/: LICENSE.md  README.md  quantum_api_client.gd
docs/domains/: algorithms-amplitude-estimation.md  algorithms-grover-search.md  algorithms-phase-estimation.md  algorithms-time-evolution.md  experiments-quantum-volume.md  experiments-randomized-benchmarking.md  experiments-state-tomography.md  experiments-t1.md  experiments-t2ramsey.md  finance-portfolio-diversification.md  finance-portfolio-optimization.md  ml-kernel-classifier.md  ml-qsvr-regressor.md  ml-vqc-classifier.md  nature-fermionic-mapping-preview.md  nature-ground-state-energy.md  optimization-knapsack.md  optimization-maxcut.md  optimization-qaoa.md  optimization-tsp.md  optimization-vqe.md
docs/migrations/: expo-animation-migration.md  godot-game-migration.md  js-sdk-integration-plan.md  python-sdk-integration-plan.md  unity-engine-integration-plan.md  unreal-engine-integration-plan.md
docs/notebooks/domains/: algorithms-amplitude-estimation.ipynb  algorithms-grover-search.ipynb  algorithms-phase-estimation.ipynb  algorithms-time-evolution.ipynb  experiments-quantum-volume.ipynb  experiments-randomized-benchmarking.ipynb  experiments-state-tomography.ipynb  experiments-t1.ipynb  experiments-t2ramsey.ipynb  finance-portfolio-diversification.ipynb  ml-kernel-classifier.ipynb  ml-qsvr-regressor.ipynb  ml-vqc-classifier.ipynb  nature-fermionic-mapping-preview.ipynb  nature-ground-state-energy.ipynb  optimization-knapsack.ipynb  optimization-maxcut.ipynb  optimization-qaoa.ipynb  optimization-tsp.ipynb  optimization-vqe.ipynb
docs/operations/: alerts.prometheus.yml  deploy-production.md  deploy-staging.md  phase3_5_supabase_schema.sql  phase5-beginner-testing.md  slo.md
docs/sdk/: compatibility-matrix.md  release-governance.md
project/: TODO.md  VPS-redis-plan.md  info.md  nginx-quantum-api-location.conf  phase-3_75-cutover.md  phase4-byo-ibm-rollout-plan.md  quantum-api-plan.md  quantum-api-research-plan.md  questions.md  style.md
scripts/: verify_byo_ibm_flow.py  verify_key_lifecycle.py
sdk/godot/: README.md
sdk/godot/quantum_api_client/: README.MD  (+1 more)
sdk/js/: README.md  package-lock.json  package.json  tsconfig.build.cjs.json  tsconfig.json
sdk/pennylane/: README.md  pyproject.toml
sdk/pennylane/quantum_api_pennylane/: __init__.py  device.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: smoke.py
sdk/python/quantum_api_sdk/: __init__.py  client.py  errors.py  types.py
sdk/unity/: README.md  package.json
sdk/unreal/: QuantumApi.uplugin  README.md
src/quantum_api/: __init__.py  config.py  enums.py  execution_jobs.py  ibm_credentials.py  key_management.py  logging_config.py  main.py  metrics.py  middleware.py  request_context.py  security.py  supabase_auth.py
temp/: Identerest-API-support-plan.md
tests/: conftest.py  test_algorithms_api.py  test_api_contract.py  test_backends_api.py  test_circuit_runner.py  test_circuits_api.py  test_concurrency_state.py  test_dictionary.py  test_domain_docs.py  test_experiments_api.py  test_finance_api.py  test_gates.py  test_gateway_internal_api.py  test_hardware_jobs_api.py  test_ibm_profiles_api.py  test_ibm_provider_cache.py  test_key_management_api.py  test_machine_learning_api.py  test_nature_api.py  test_optimization_api.py  test_pennylane_plugin.py  test_phase5_docs.py  test_phase5_experiments_api.py  test_phase5_finance_api.py  test_phase5_machine_learning_api.py  test_phase5_nature_api.py  test_phase5_optimization_api.py  test_python_sdk.py  test_qasm_api.py  test_quantum_core.py  test_security_api.py  test_security_config.py  test_supabase_auth.py  test_text_transform.py  test_transpile_api.py  test_verify_byo_ibm_flow.py
tests/perf/: test_circuits_perf.py  test_domain_perf.py  test_phase5_perf.py
(+109 files in other folders)
