[project]
name = "quantum-api"
version = "0.1.0"
description = "Quantum API - FastAPI backend for quantum gates and text transformation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Quantum API Contributors" }
]
dependencies = [
  "fastapi>=0.115.10",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "prometheus-client>=0.22.0",
  "qiskit>=2.1.0",
  "qiskit-aer>=0.17.0",
  "qiskit-ibm-runtime>=0.42.0",
  "redis>=5.2.1",
  "numpy>=2.3.0",
  "httpx>=0.28.1",
  "PyJWT[crypto]>=2.10.1",
  "cryptography>=44.0.0",
  "sqlalchemy>=2.0.38",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.21.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1",
  "fakeredis>=2.31.0",
  "ruff>=0.11.2"
]

[project.scripts]
quantum-api = "quantum_api.main:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "perf: non-blocking performance benchmark tests",
]
