[project]
name = "quantum-api-sdk"
version = "0.1.0"
description = "Python client scaffold for Quantum API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantum_api_sdk"]
