[project]
name = "quantum-api-sdk"
version = "0.1.0"
description = "Package-ready Python client for the Quantum API /v1 contract"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "Quantum API Contributors" }
]
keywords = ["quantum", "api", "sdk", "python", "httpx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "httpx>=0.28.1"
]

[project.urls]
Homepage = "https://github.com/davidjgrimsley/quantum-api"
Repository = "https://github.com/davidjgrimsley/quantum-api"
Issues = "https://github.com/davidjgrimsley/quantum-api/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantum_api_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"quantum_api_sdk/py.typed" = "quantum_api_sdk/py.typed"
